# recordex-be

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
config/: asgi.py  routers.py  settings.py  urls.py  utils.py  wsgi.py
config/tests/: test_utils.py
core/: models.py
diagrams/: models.drawio  use_case.drawio
records/: constants.py  models.py  serializers.py  views.py
records/migrations/: 0001_initial.py
records/tests/: conftest.py  helpers.py  test_models.py  test_views.py
